# prompt_journal

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/prompt_journal/: __init__.py  main.py
